--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -9,7 +9,9 @@ $breakpoints: (
         xs: 576px,
         sm: 768px,
         md: 992px,
-        lg: 1200px
+        lg: 1200px,
+        1500: 1500px,
+        1600: 1600px,
 );
 
 
