--- a/app/scss/inc/_footer.scss
+++ b/app/scss/inc/_footer.scss
@@ -1,19 +1,36 @@
 footer {
   border-top: 1px solid #DDDDDD;
-  padding: 30px;
+  padding: 30px 0;
 
   .footer-wrapp {
     display: flex;
     justify-content: space-between;
+    @include media-breakpoint-up(md) {
+      flex-direction: column-reverse;
+      text-align: center;
+    }
+
 
     .footer-item {
+      @include media-breakpoint-up(md) {
+        margin: 14px 0;
+
+      }
+
+
       .logo {
         margin-top: -13px;
+
         > a {
           color: $blueColor;
           font-size: 35px;
           font-weight: 700;
+          @include media-breakpoint-up(md) {
+            font-size: 20px;
+          }
+
         }
+
         p {
           font-family: "OpenSansLight";
           font-size: 12px;
@@ -24,14 +41,18 @@ footer {
 
       ul {
         li {
-          display: inline-block;
-          margin: 0 7px;
-
           a {
             font-family: "OpenSansSemibold";
             font-size: 15px;
             color: $blueColor;
           }
+        }
+      }
+
+      ul.social-list {
+        li {
+          display: inline-block;
+          margin: 0 7px;
         }
       }
 
