--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,7 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css";
-@import "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css";
+@import "https://use.fontawesome.com/releases/v5.8.1/css/all.css";
+@import "../libs/slider/owl.carousel.min.css";
+@import "../libs/slider/owl.theme.default.min.css";
+
 @import "reset";
 @import "vars";
 @import "fonts";
