--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -16,6 +16,12 @@
 
 
 @import "pages/home";
+@import "pages/register";
+@import "pages/login";
+@import "pages/after_login";
+@import "pages/change_password";
+@import "pages/profile";
+
 
 
 
