--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -10,6 +10,7 @@ $breakpoints: (
         sm: 768px,
         md: 992px,
         lg: 1200px,
+        1400: 1400px,
         1500: 1500px,
         1600: 1600px,
 );
