--- a/app/scss/pages/profile.scss
+++ b/app/scss/pages/profile.scss
@@ -23,7 +23,7 @@ section.profile {
     }
 
     .left {
-      background: #DEE3E8;
+      background: #FBFBFB;
       flex-basis: 25%;
       padding: 30px;
 
