--- a/app/scss/inc/_header.scss
+++ b/app/scss/inc/_header.scss
@@ -59,6 +59,7 @@ header {
           background: #f7f7f7;
           padding: 20px;
           box-shadow: 0 0 15px 0 #e7e0e0;
+          z-index: 99;
         }
 
         li {
