--- a/app/scss/pages/_login.scss
+++ b/app/scss/pages/_login.scss
@@ -166,8 +166,7 @@ section.login {
     }
     .login-right {
       flex-basis: 50%;
-      .cloud1 {
-
+      .login-cloud1 {
         position: absolute;
         right: 34%;
         top: 24%;
