--- a/app/scss/_globar.scss
+++ b/app/scss/_globar.scss
@@ -10,44 +10,53 @@
   }
 }
 
-//::selection {
-//  background-color: $accent;
-//  color: #fff;
-//}
 
 body {
   font-size: 16px;
   min-width: 320px;
   position: relative;
   line-height: 1.65;
-  font-family: $default-font;
+  font-family: "OpenSansRegulyar";
   overflow-x: hidden;
-  button {
+
+  button, select {
     outline: none;
     cursor: pointer;
+
     &:hover {
       outline: none;
     }
+
     &:active {
       outline: none;
     }
   }
+
   input, textarea {
     border: #666 1px solid;
     outline: none;
+
     &:focus:required:invalid {
       border-color: red;
     }
+
     &:required:valid {
       border-color: green;
     }
   }
+
   a {
     text-decoration: none;
+
     &:hover {
       text-decoration: none;
     }
+
+    &:active, &:visited {
+      color: $blueColor;
+    }
   }
+
   img {
     max-width: 100%;
     max-height: 100%;
@@ -58,6 +67,7 @@ body {
   display: block;
   max-width: 100%;
   height: auto;
+
   &.img-width {
     width: 100%;
   }
@@ -83,8 +93,13 @@ b, strong {
 
 
 }
+
 .content-full {
   width: 100%;
   display: block;
   box-sizing: border-box;
+}
+
+header.border {
+  border-bottom: 1px solid #DDDDDD;
 }
