--- a/app/scss/pages/_login.scss
+++ b/app/scss/pages/_login.scss
@@ -4,6 +4,8 @@ section.login {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    padding: 0 0 50px 0;
+
     @include media-breakpoint-up(md) {
       flex-direction: column-reverse;
     }
