--- a/app/scss/pages/_after_login.scss
+++ b/app/scss/pages/_after_login.scss
@@ -46,7 +46,7 @@
          margin-right: 0;
          padding: 20px 30px 15px 20px;
          transition: all 0.3s ease-in-out;
-
+         border-left: 5px solid #fff;
          a {
            font-family: OpenSansBold;
            color: #0f3358;
