--- a/app/scss/pages/_register.scss
+++ b/app/scss/pages/_register.scss
@@ -150,8 +150,8 @@ section.register {
             border-radius: 37px;
             color: #fff;
             width: 100%;
-            border: 0;
-            padding: 19px 30px;
+            border: 1px solid $redColor;
+            padding: 10px 30px;
             font-size: 20px;
             text-transform: uppercase;
             height: 60px;
