--- a/app/scss/pages/_saved_searches.scss
+++ b/app/scss/pages/_saved_searches.scss
@@ -162,7 +162,7 @@ section.saved-searches {
           border-radius: 37px;
           color: #fff;
           transition: all .4s ease-in-out;
-          border: 0;
+          border: 1px solid #e6443b;
           padding: 12px 20px;
           font-size: 18px;
 
