--- a/app/scss/pages/_search-result.scss
+++ b/app/scss/pages/_search-result.scss
@@ -296,7 +296,7 @@ section.search-result {
               border-radius: 37px;
               color: #fff;
               transition: all .4s ease-in-out;
-              border: 0;
+              border: 1px solid $redColor;
               font-size: 18px;
               width: max-content;
 
