--- a/app/scss/pages/_change_password.scss
+++ b/app/scss/pages/_change_password.scss
@@ -77,8 +77,8 @@ section.reset-password {
         border-radius: 37px;
         color: $blueColor;
         transition: all .4s ease-in-out;
-        border: 0;
         margin-right: 20px;
+        border: 1px solid #EFEFEF;
         @include media-breakpoint-up(md) {
           width: 100%;
           margin: 20px 0;
@@ -98,13 +98,13 @@ section.reset-password {
         border-radius: 37px;
         color: #fff;
         transition: all .4s ease-in-out;
-        border: 0;
+        border: 1px solid $redColor;
         @include media-breakpoint-up(md) {
           width: 100%;
         }
 
         &:hover {
-          border: 1px solid $redColor;
+
           color: $redColor;
           background: #fff;
         }
