--- a/app/scss/pages/_profile.scss
+++ b/app/scss/pages/_profile.scss
@@ -74,7 +74,7 @@ section.profile {
           border-radius: 37px;
           color: #fff;
           transition: all .4s ease-in-out;
-          border: 0;
+          border: 1px solid $redColor;
 
           &:hover {
             border: 1px solid $blueColor;
