--- a/app/scss/pages/_search-result.scss
+++ b/app/scss/pages/_search-result.scss
@@ -233,10 +233,20 @@ section.search-result {
 
       .product-box-lf {
         flex-basis: 30%;
+        width: 360px;
+        //height: 290px;
+        margin: 0 auto;
 
-        img {
+        @include media-breakpoint-up(sm) {
           width: 100%;
           height: 100%;
+        }
+        img {
+          position: relative;
+          float: left;
+          width: 360px;
+          height: 288px;
+          object-fit: cover;
         }
       }
 
